# robotics-control-mcp

./: .gitignore  .mcp.json  README.md  glama.json  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/mcp/: server-card.json
